--- a/RayTracerFramework/RayTracerSmall/RayTracerSmall.vcxproj
+++ b/RayTracerFramework/RayTracerSmall/RayTracerSmall.vcxproj
@@ -147,6 +147,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MemoryDebugger.h" />
+    <ClInclude Include="MemoryPool.h" />
+    <ClInclude Include="Sphere.h" />
+    <ClInclude Include="Vec3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
