--- a/PlayStationRayTracer/PlayStationRayTracer/PlayStationRayTracer.vcxproj
+++ b/PlayStationRayTracer/PlayStationRayTracer/PlayStationRayTracer.vcxproj
@@ -63,9 +63,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MemoryDebugger.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="allocator.h" />
+    <ClInclude Include="MemoryDebugger.h" />
+    <ClInclude Include="MemoryPool.h" />
   </ItemGroup>
   <Import Condition="'$(ConfigurationType)' == 'Makefile' and Exists('$(VCTargetsPath)\Platforms\$(Platform)\SCE.Makefile.$(Platform).targets')" Project="$(VCTargetsPath)\Platforms\$(Platform)\SCE.Makefile.$(Platform).targets" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
