--- a/PlayStationRayTracer/PlayStationRayTracer/PlayStationRayTracer.vcxproj
+++ b/PlayStationRayTracer/PlayStationRayTracer/PlayStationRayTracer.vcxproj
@@ -65,6 +65,9 @@
       <OptimizationLevel>Level2</OptimizationLevel>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>-lSceSysmodule_stub_weak;-lSceUlt_stub_weak</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
